package unidata.ast.test;

message PrimRepeated {
    repeated int64 f_int64 = 2;
    repeated uint64 f_uint64 = 4;
    repeated sint64 f_sint64 = 6;
    repeated fixed64 f_fixed64 = 8;
    repeated sfixed64 f_sfixed64 = 10;
    repeated float f_float = 12;
    repeated int32 f_int32 = 1 [packed=true];
    repeated uint32 f_uint32 = 3 [packed=true];
    repeated sint32 f_sint32 = 5 [packed=true];
    repeated fixed32 f_fixed32 = 7 [packed=true];
    repeated sfixed32 f_sfixed32 = 9 [packed=true];
    repeated double f_double = 11 [packed=true];
}
